# symbolic-llm-validator

./: .env.example  .gitignore  .replit  IMPLEMENTATION_PLAN.md  MANIFEST.in  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  run.py
.claude/: settings.local.json
docs/: ONTOLOGY_VISUALIZATION_PLAN.md  api-reference.md  architecture.md  configuration.md  contributing.md  core-modules.md  index.md  instructions.md  testing.md
src/logic_guard_layer/: __init__.py  __main__.py  cli.py  config.py  main.py
src/logic_guard_layer/core/: __init__.py  corrector.py  orchestrator.py  parser.py  reasoner.py
src/logic_guard_layer/data/: __init__.py  maintenance.owl  maintenance_schema.json  physics_ontology.json  sample_ontology.json
src/logic_guard_layer/llm/: __init__.py  client.py  prompts.py
src/logic_guard_layer/models/: __init__.py  entities.py  responses.py
src/logic_guard_layer/ontology/: __init__.py  constraints.py  loader.py  manager.py
src/logic_guard_layer/web/: __init__.py
src/logic_guard_layer/web/static/css/: terminal.css  visualization.css
src/logic_guard_layer/web/static/js/: ontology-viz.js  security.js  terminal.js
src/logic_guard_layer/web/templates/: 404.html  500.html  admin.html  base.html  help.html  history.html  index.html  login.html  ontology.html  validate.html  visualization.html
tests/: __init__.py  conftest.py  test_api.py  test_constraints.py  test_corrector.py  test_models.py  test_ontology_manager.py  test_orchestrator.py  test_owl_validation.py  test_parser.py  test_reasoner.py  test_sample_verification.py
